# google-indexAPI-python

./: .gitignore  LICENSE  README.md  indexing.py  indexing.spec  pyproject.toml
logs/indexing_logs_20240819_155848/: failed.csv  updated.csv
src/: build_script.py  indexing.py
