[tool.poetry]
name = "google-indexAPI-python"
version = "1.1.0"
description = "A Python-based tool for automating the submission of URLs to Google's Indexing API. This project simplifies the process of notifying Google about updates to your website, ensuring that your content is indexed quickly and efficiently."
authors = ["koutsosg <g.koutsos123@gmail.com>"]
license = "Custom"
readme = "README.md"
packages=[{include="src/"}]

[tool.poetry.dependencies]
python = ">=3.12, <3.14"
altgraph = "^0.17.4"
httplib2 = "^0.22.0"
numpy = "^2.1.0"
oauth2client = "^4.1.3"
packaging = "^24.1"
pandas = "^2.2.2"
pefile = "^2023.2.7"
pyasn1 = "^0.6.0"
pyasn1_modules = "^0.4.0"
pyinstaller = "^6.10.0"
pyinstaller-hooks-contrib = "^2024.8"
pyparsing = "^3.1.2"
python-dateutil = "^2.9.0.post0"
pytz = "^2024.1"
pywin32-ctypes = "^0.2.3"
rsa = "^4.9"
setuptools = "^72.2.0"
six = "^1.16.0"
tzdata = "^2024.1"
ttkbootstrap = "^1.10.1"

[tool.poetry.dev-dependencies]
pytest = "^6.2.5"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"


[tool.poetry.scripts]
build-exe = "src.build_script:build"
start = "src.indexing:main"


